# PyPocket

./: .gitignore  CHANGELOG.md  README.md  conftest.py  dev-env.yaml  pyproject.toml  setup.cfg  sonar-project.properties
.github/workflows/: main.yml
pypocket/: __init__.py  auth.py  html.py  pocket.py  pocket_api_endpoints.py  pocket_dataclass.py  utils.py
pypocket/test/: auth_test.py  html_test.py  pocket_test.py  test_pocket.py  utils_test.py
