[tool.poetry]
name = "pypocket"
version = "v0.0.1"
description = "A Python wrapper for GetPocket"
authors = ["Essi Alizadeh <pypocket@ealizadeh.com>"]
keywords = ["GetPocket", "pocket", "wrapper"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/e-alizadeh/PyPocket"
repository = "https://github.com/e-alizadeh/PyPocket"


[[tool.poetry.source]]
name = 'default'
url = 'https://pypi.python.org/simple'
secondary = true

[tool.poetry.dependencies]
python = "^3.7.1"
requests = "^2.25.1"
pandas = "^1.2.0"
dominate = "^2.6.0"


[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pytest-cov = "^2.10.1"
pre-commit = "^2.9.3"
sphinx = "^3.4.1"
ipython = "^7.19.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"